# Potential

./: CMakeLists.txt  LICENSE  README.md  makefile
src/: bench.c  bench.h  bit_manipluation.c  bit_manipluation.h  bit_manipulation.c  bit_manipulation.h  board.c  board.h  board_constants.c  board_constants.h  cuckoo.c  cuckoo.h  datagen.c  datagen.h  evaluation.c  evaluation.h  fen.c  fen.h  generate_fen.c  generate_fen.h  history.c  history.h  magic.c  magic.h  main.c  makefile  mask.c  mask.h  move.c  move.h  movepicker.c  movepicker.h  parallel_bench.sh  perft.c  perft.h  potential.c  pre_tables.c  pre_tables.h  search.c  search.h  (+22 more)
src/.tmp/: bench.d  bit_manipulation.d  board_constants.d  evaluation.d  fen.d  history.d  magic.d  mask.d  move.d  perft.d  potential.d  search.d  see.d  table.d  time.d  timeman.d  uci.d  utils.d
src/test/: perf.c  perf.h  see_test.c  see_test.h
